<resources>
    <string name="app_name">Heroes of Nova</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_personajes">Personajes</string>
    <string name="menu_grupos">Grupos</string>
    <string name="menu_razas">Razas</string>
    <string name="menu_clases">Clases</string>
    <string name="menu_mochilas">Mochilas</string>
    <string name="menu_armas">Armas</string>
    <string name="menu_armaduras">Armaduras</string>
    <string name="menu_items">Items</string>
    <string name="menu_artefactos">Artefactos</string>
</resources>