<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.leanova.heroesofnova.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_grupos"
        android:name="com.leanova.heroesofnova.ui.grupos.GrupoFragment"
        android:label="@string/menu_grupos"
        tools:layout="@layout/fragment_grupo" >
        <action
            android:id="@+id/action_nav_grupos_to_buscarGrupoFragment"
            app:destination="@id/buscarGrupoFragment" />
        <action
            android:id="@+id/action_nav_grupos_to_crearGrupoFragment"
            app:destination="@id/crearGrupoFragment" />
        <action
            android:id="@+id/action_nav_grupos_to_detalleGrupoFragment3"
            app:destination="@id/detalleGrupoFragment" />
    </fragment>
    <fragment
        android:id="@+id/crearGrupoFragment"
        android:name="com.leanova.heroesofnova.ui.grupos.CrearGrupoFragment"
        android:label="Crear grupo"
        tools:layout="@layout/fragment_crear_grupo" />
    <fragment
        android:id="@+id/buscarGrupoFragment"
        android:name="com.leanova.heroesofnova.ui.grupos.BuscarGrupoFragment"
        android:label="Buscar grupo"
        tools:layout="@layout/fragment_buscar_grupo" >
        <action
            android:id="@+id/action_buscarGrupoFragment_to_detalleGrupoFragment"
            app:destination="@id/detalleGrupoFragment" />
    </fragment>
    <fragment
        android:id="@+id/detalleGrupoFragment"
        android:name="com.leanova.heroesofnova.ui.grupos.DetalleGrupoFragment"
        android:label="Detalle grupo"
        tools:layout="@layout/fragment_detalle_grupo" >
        <action
            android:id="@+id/action_detalleGrupoFragment_to_crearGrupoFragment"
            app:destination="@id/crearGrupoFragment" />
        <action
            android:id="@+id/action_detalleGrupoFragment_to_unirseGrupoFragment"
            app:destination="@id/unirseGrupoFragment" />
    </fragment>
    <fragment
        android:id="@+id/unirseGrupoFragment"
        android:name="com.leanova.heroesofnova.ui.grupos.UnirseGrupoFragment"
        android:label="Unirse grupo"
        tools:layout="@layout/fragment_unirse_grupo" />

    <fragment
        android:id="@+id/nav_personajes"
        android:name="com.leanova.heroesofnova.ui.personajes.PersonajeFragment"
        android:label="@string/menu_personajes"
        tools:layout="@layout/fragment_personaje" >
        <action
            android:id="@+id/action_nav_personajes_to_crearPersonaje"
            app:destination="@id/crearPersonajeFragment" />
        <action
            android:id="@+id/action_nav_personajes_to_detallePersonajeFragment"
            app:destination="@id/detallePersonajeFragment" />
    </fragment>
    <fragment
        android:id="@+id/crearPersonajeFragment"
        android:name="com.leanova.heroesofnova.ui.personajes.CrearPersonajeFragment"
        android:label="Nuevo personaje"
        tools:layout="@layout/fragment_crear_personaje" />
    <fragment
        android:id="@+id/detallePersonajeFragment"
        android:name="com.leanova.heroesofnova.ui.personajes.DetallePersonajeFragment"
        android:label="Detalle personaje"
        tools:layout="@layout/fragment_detalle_personaje" >
        <action
            android:id="@+id/action_detallePersonajeFragment_to_jugarFragment"
            app:destination="@id/jugarFragment" />
    </fragment>
    <fragment
        android:id="@+id/jugarFragment"
        android:name="com.leanova.heroesofnova.ui.personajes.jugar.JugarFragment"
        android:label="Jugar"
        tools:layout="@layout/fragment_jugar" />

    <fragment
        android:id="@+id/nav_clases"
        android:name="com.leanova.heroesofnova.ui.clases.ClaseFragment"
        android:label="@string/menu_clases"
        tools:layout="@layout/fragment_clases" >
        <action
            android:id="@+id/action_nav_clases_to_detalleClaseFragment"
            app:destination="@id/detalleClaseFragment" />
        <action
            android:id="@+id/action_nav_clases_to_crearClaseFragment"
            app:destination="@id/crearClaseFragment" />
    </fragment>

    <fragment
        android:id="@+id/detalleClaseFragment"
        android:name="com.leanova.heroesofnova.ui.clases.DetalleClaseFragment"
        android:label="Detalle clase"
        tools:layout="@layout/fragment_detalle_clase" >
        <action
            android:id="@+id/action_detalleClaseFragment_to_crearClaseFragment"
            app:destination="@id/crearClaseFragment" />
    </fragment>

    <fragment
        android:id="@+id/crearClaseFragment"
        android:name="com.leanova.heroesofnova.ui.clases.CrearClaseFragment"
        android:label="Crear clase"
        tools:layout="@layout/fragment_crear_clase" />

    <fragment
        android:id="@+id/nav_razas"
        android:name="com.leanova.heroesofnova.ui.razas.RazaFragment"
        android:label="@string/menu_razas"
        tools:layout="@layout/fragment_raza" >
        <action
            android:id="@+id/action_nav_razas_to_detalleRazaFragment"
            app:destination="@id/detalleRazaFragment" />
        <action
            android:id="@+id/action_nav_razas_to_crearRazaFragment"
            app:destination="@id/crearRazaFragment" />
    </fragment>

    <fragment
        android:id="@+id/crearRazaFragment"
        android:name="com.leanova.heroesofnova.ui.razas.CrearRazaFragment"
        android:label="Crear raza"
        tools:layout="@layout/fragment_crear_raza" />

    <fragment
        android:id="@+id/detalleRazaFragment"
        android:name="com.leanova.heroesofnova.ui.razas.DetalleRazaFragment"
        android:label="Detalle raza"
        tools:layout="@layout/fragment_detalle_raza" >
        <action
            android:id="@+id/action_detalleRazaFragment_to_crearRazaFragment"
            app:destination="@id/crearRazaFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_mochilas"
        android:name="com.leanova.heroesofnova.ui.mochilas.MochilaFragment"
        android:label="@string/menu_mochilas"
        tools:layout="@layout/fragment_mochila" >
        <action
            android:id="@+id/action_mochilaFragment_to_detalleMochilaFragment"
            app:destination="@id/detalleMochilaFragment" />
        <action
            android:id="@+id/action_mochilaFragment_to_crearMochilaFragment"
            app:destination="@id/crearMochilaFragment" />
    </fragment>

    <fragment
        android:id="@+id/detalleMochilaFragment"
        android:name="com.leanova.heroesofnova.ui.mochilas.DetalleMochilaFragment"
        android:label="Detalle mochila"
        tools:layout="@layout/fragment_detalle_mochila" >
        <action
            android:id="@+id/action_detalleMochilaFragment_to_crearMochilaFragment"
            app:destination="@id/crearMochilaFragment" />
    </fragment>

    <fragment
        android:id="@+id/crearMochilaFragment"
        android:name="com.leanova.heroesofnova.ui.mochilas.CrearMochilaFragment"
        android:label="Crear mochila"
        tools:layout="@layout/fragment_crear_mochila" />

    <fragment
        android:id="@+id/nav_armas"
        android:name="com.leanova.heroesofnova.ui.armas.ArmaFragment"
        android:label="@string/menu_armas"
        tools:layout="@layout/fragment_arma" >
        <action
            android:id="@+id/action_armaFragment_to_detalleArmaFragment"
            app:destination="@id/detalleArmaFragment" />
        <action
            android:id="@+id/action_nav_armas_to_crearArnaFragment"
            app:destination="@id/crearArnaFragment" />
    </fragment>
    <fragment
        android:id="@+id/detalleArmaFragment"
        android:name="com.leanova.heroesofnova.ui.armas.DetalleArmaFragment"
        android:label="Detalle arma"
        tools:layout="@layout/fragment_detalle_arma" >
        <action
            android:id="@+id/action_detalleArmaFragment_to_crearArnaFragment"
            app:destination="@id/crearArnaFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_armaduras"
        android:name="com.leanova.heroesofnova.ui.armaduras.ArmaduraFragment"
        android:label="@string/menu_armaduras"
        tools:layout="@layout/fragment_armadura" >
        <action
            android:id="@+id/action_nav_armaduras_to_detalleArmaduraFragment"
            app:destination="@id/detalleArmaduraFragment" />
        <action
            android:id="@+id/action_nav_armaduras_to_crearArmaduraFragment"
            app:destination="@id/crearArmaduraFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_items"
        android:name="com.leanova.heroesofnova.ui.items.ItemFragment"
        android:label="@string/menu_items"
        tools:layout="@layout/fragment_item" >
        <action
            android:id="@+id/action_nav_items_to_detalleItemFragment"
            app:destination="@id/detalleItemFragment" />
        <action
            android:id="@+id/action_nav_items_to_crearItemFragment"
            app:destination="@id/crearItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/crearArmaduraFragment"
        android:name="com.leanova.heroesofnova.ui.armaduras.CrearArmaduraFragment"
        android:label="Crear armadura"
        tools:layout="@layout/fragment_crear_armadura" />
    <fragment
        android:id="@+id/crearItemFragment"
        android:name="com.leanova.heroesofnova.ui.items.CrearItemFragment"
        android:label="Crear item"
        tools:layout="@layout/fragment_crear_item" />
    <fragment
        android:id="@+id/detalleArmaduraFragment"
        android:name="com.leanova.heroesofnova.ui.armaduras.DetalleArmaduraFragment"
        android:label="Detalle armadura"
        tools:layout="@layout/fragment_detalle_armadura" >
        <action
            android:id="@+id/action_detalleArmaduraFragment_to_crearArmaduraFragment"
            app:destination="@id/crearArmaduraFragment" />
    </fragment>
    <fragment
        android:id="@+id/detalleItemFragment"
        android:name="com.leanova.heroesofnova.ui.items.DetalleItemFragment"
        android:label="Detalle item"
        tools:layout="@layout/fragment_detalle_item" >
        <action
            android:id="@+id/action_detalleItemFragment_to_crearItemFragment"
            app:destination="@id/crearItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/crearArnaFragment"
        android:name="com.leanova.heroesofnova.ui.armas.CrearArmaFragment"
        android:label="Crear arma"
        tools:layout="@layout/fragment_crear_arma" />
</navigation>